--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -15,7 +15,7 @@
             <!-- Logo and name / Left navbar -->
             <div class="container-fluid">
                 <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-black text-center">ACADEMIC ADVISOR<br>MANAGEMENT</b></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">ACADEMIC ADVISOR<br>MANAGEMENT</b></a>
 
                 <!-- Space coz im clueless -->
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
@@ -39,13 +39,16 @@
     <!--Content of pages-->
     <div class="container-fluid">
         <div class ="row">
-            <div class="col-sm-2 d-sm-inline-flex justify-content-center">
+            <div class="col-sm-2 d-sm-inline-flex justify-content-center box-shadow ml-3" style="background-color:gray">
                 <ul class="navbar-nav flex-grow-1 ">
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Login</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Dang Nhap</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">Home Page</a>
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">Trang Chu</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SchoolYear">Nam Hoc</a>
                     </li>
                 </ul>
             </div>
