--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml.css
@@ -1,6 +1,10 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+body
+{
+background-color:gray;
+}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -45,4 +49,18 @@ button.accept-policy {
   width: 100%;
   white-space: nowrap;
   line-height: 60px;
+}
+
+.overlay 
+{
+    position :absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:auto;
+    background-color:black;
+}
+#videoContainer
+{
+    position:relative;
 }
