Login Front-end finished

--- a/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
@@ -4,16 +4,15 @@
 
 <!-- Page content -->
     <!-- Navigation links -->
-        <div class ="container-fluid" id="videoContainer">
-            <div class="overlay">
-                <video class="embed-responsive-item embed-responsive-16by9 align-self-center mr-0" autoplay="" loop="" muted="" style="width:100%;">
-                    <h3>EJOB</h3>
-                    <h3>VLU</h3>
-                    <h1>XIN CHÀO</h1>
-                    <h2>CHÚC BẠN MỘT NGÀY LÀM VIỆC TỐT LÀNH.</h2>
-                    <br>
-                    <h4><span id="clock">22:57:45</span> - HCM, Ngày 2 Tháng 9 Năm 2024</h4>
-                    <source src="~/Resources/Video/background_VLU.mp4" type="video/mp4">
-                </video>
-            </div>
+        <div class="container-fluid" style="background-color:lightblue !important;">
+            <video disablePictureInPicture class="embed-responsive-item embed-responsive-16by9 align-self-center mr-0" 
+                       autoplay="" loop="" muted="" style="width:100%;">
+                <h3>EJOB</h3>
+                <h3>VLU</h3>
+                <h1>XIN CHÀO</h1>
+                <h2>CHÚC BẠN MỘT NGÀY LÀM VIỆC TỐT LÀNH.</h2>
+                <br>
+                <h4><span id="clock">22:57:45</span> - HCM, Ngày 2 Tháng 9 Năm 2024</h4>
+                <source src="~/Resources/Video/background_VLU.mp4" type="video/mp4">
+            </video>
         </div>
