--- a/CAPSTONE_TEAM01_2024/Views/Home/Index.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Home/Index.cshtml
@@ -3,5 +3,13 @@
 }
 
 <!-- Page content -->
-    <!-- Navigation links -->
-<b>Login</b>
+<div class="container-fluid d-flex justify-content-center align-items-center" id="Login_Content" style="background-color: rgba(0,0,0,0.5);height:85vh">
+    <button id="Login_Button" style=" width: 400px !important;
+                                      height: 400px !important;
+                                      background-color: rgba(128,128,128,0.5) !important;
+                                      border: 5px solid gray;">
+        <h1 class="fs-1 fw-bold text-white">DANG NHAP</h1>
+        <img src="~/Resources/Img/logoVL.png" style="width:50%; height:auto">
+        <h2 class="fs-4 text-white">Su dung tai khoan Email VLU</h2>
+    </button>
+</div>
