--- a/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
@@ -11,29 +11,35 @@
 <body>
     <header>
         <!-- Main navbar -->
-        <nav class="navbar navbar-expand-sm navbar-light bg-danger border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow" id="Login_Top_Nav">
             <!-- Logo and name / Left navbar -->
             <div class="container-fluid">
                 <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;>
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">ACADEMIC ADVISOR<br>MANAGEMENT</b></a>
-
                 <!-- Space coz im clueless -->
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
-                </div>
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center"></div>
             </div>
         </nav>
     </header>
     <!--Content of pages-->
-    <div class="container-fluid">
-        <main role="main" class="pb-3">
+    <div class="container-fluid" id="Content_Page">
+        <img src="~/Resources/Img/backgroundVL.jpg" style="height: inherit;width: inherit;position: absolute;z-index: -1;">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
 
     <!--Footer-->
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Team 01 CAPSTONE - VLU IT Department
+    <footer class="border-top text-muted" >
+        <div class="container-fluid" id="Login_Footer">
+            <div style="float:left; display:inline;">
+                <b style="color:#d72235;">&copy; 2024 - Van Lang University<br></b>
+                 <b>IT Department</b>
+            </div>
+            <div style="float:right;">
+                <b style ="color:#d72235;">CAPSTONE 2024 - TEAM 01<br></b>
+                <b>Software Engineer Major</b>
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
