--- a/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml.css
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml.css
@@ -1,10 +1,5 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
-
-body 
-{
-    background-color: gray;
-}
 a.navbar-brand {
   white-space: normal;
   text-align: center;
@@ -50,3 +45,18 @@ button.accept-policy {
   white-space: nowrap;
   line-height: 60px;
 }
+#Content_Page {
+    height: 85vh;
+    padding: 0 !important;
+    margin: 0 !important;
+}
+#Login_Top_Nav {
+  background-color: #d72235;
+}
+#Login_Footer {
+    padding-top: 0.5rem !important;
+    padding-left: 3rem !important;
+    padding-right: 3rem !important;
+    background-color: #d72235 !important;
+}
+
