--- a/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
@@ -24,7 +24,7 @@
     <!--Content of pages-->
     <div class="container-fluid" id="Content_Page">
         <img src="~/Resources/Img/backgroundVL.jpg" style="height: inherit;width: inherit;position: absolute;z-index: -1;">
-        <main role="main">
+        <main role="main" id="Main_Content">
             @RenderBody()
         </main>
     </div>
@@ -33,7 +33,7 @@
     <footer class="border-top text-muted" >
         <div class="container-fluid" id="Login_Footer">
             <div style="float:left; display:inline;">
-                <b style="color:#d72235;">&copy; 2024 - Van Lang University<br></b>
+                <b style="color:#d72235;">&copy; 2024 - Van Lang University</b>
                  <b>IT Department</b>
             </div>
             <div style="float:right;">
