Login completed/ Minor QoL update/ MainLayout adjustments

--- a/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Home/HomePage.cshtml
@@ -11,7 +11,7 @@
         <source src="~/Resources/Video/background_VLU.mp4" type="video/mp4">
     </video>
     <div class="container text-center" style="position:absolute;background-color: rgba(0,0,0,0.7); padding: 2rem 2rem 2rem 2rem;">
-        <h3 style="color:white">WEBSITE QUAN LY CO VAN HOC TAP</h3>
+        <h3 style="color:white">WEBSITE QUẢN LÝ CÔNG TÁC CỐ VẤN HỌC TẬP</h3>
         <h3 style="color:white">-VLU-</h3>
         <h1 style="color:white">XIN CHÀO</h1>
         <h2 style="color:white">CHÚC BẠN MỘT NGÀY LÀM VIỆC TỐT LÀNH.</h2>
