--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -7,6 +7,9 @@
             break;
         case "HomePage":
         case "SchoolYear":
+        case "EndSemesterReport":
+        case "SemesterPlan":
+        case "Statistics":
             Layout = "_MainLayout";
             break;
     }
