--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -15,7 +15,7 @@
             <!-- Logo and name / Left navbar -->
             <div class="container-fluid">
                 <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">QUAN LI<br>CO VAN HOC TAP</b></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">QUẢN LÝ CÔNG TÁC<br>CỐ VẤN HỌC TẬP</b></a>
 
                 <!-- Space coz im clueless -->
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center">
@@ -48,12 +48,42 @@
             <!--Side Navbar-->
         <div class ="p-3 box-shadow" id="SideNav">
                 <ul class="navbar-nav flex-grow-1">
-                <li class="nav-item text-center">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">Trang Chu</a>
+                    <li class="nav-item text-center">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">
+                        <img src="~/Resources/Img/Icon2.png" style="width:30px;height:auto;padding-right:0.5rem;">
+                            Trang chủ
+                        </a>
                     </li>
-                <li class="nav-item text-center">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SchoolYear">Nam Hoc</a>
-                    </li>
+                    <li class="nav-item text-center">
+                        <div class ="dropdown show">
+                            <a class="text-dark btn dropdown-toggle fw-bold"
+                               id="dropdownMenuLink"                            
+                               href="#" role="button" 
+                               data-toggle="dropdown" 
+                               aria-haspopup="true" 
+                               aria-expanded="false"
+                               data-bs-toggle="dropdown"
+                               style="width:100%;">
+                                    <img src="~/Resources/Img/Icon1.png" 
+                                         style="width:30px;height:auto;padding-right:0.5rem;">
+                                    Danh Mục
+                            </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="width:100%;">
+                                <a class="dropdown-item text-black fw-bold" 
+                                   asp-controller="Categories" 
+                                   asp-action="SchoolYear">Năm Học</a>
+                                <a class="dropdown-item text-black fw-bold"
+                                   asp-controller="Categories"
+                                   asp-action="SemesterPlan">Kế hoạch học kỳ</a>
+                                <a class="dropdown-item text-black fw-bold"
+                                   asp-controller="Categories"
+                                   asp-action="EndSemesterReport">Báo cáo cuối kì</a>
+                                <a class="dropdown-item text-black fw-bold"
+                                   asp-controller="Categories"
+                                   asp-action="Statistics">Thống kê</a>
+                            </div>
+                        </div>
+                    </li>                   
                 </ul>
             </div>
             <!--Content of page-->
@@ -62,7 +92,6 @@
                     @RenderBody()
                 </main>
             </div>
-        </div>
     </div>
         
 
