--- a/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_LoginLayout.cshtml
@@ -8,40 +8,19 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/CAPSTONE_TEAM01_2024.styles.css" asp-append-version="true" />
 </head>
+
 <body>
-    <header>
-        <!-- Main navbar -->
-        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow" id="Login_Top_Nav">
-            <!-- Logo and name / Left navbar -->
-            <div class="container-fluid">
-                <img src="~/Resources/Img/logoVL.png" class="brand-image elevation-3" style="width: 50px; height: auto;>
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><b class="m-2 text-white text-center">QUẢN LÝ CÔNG TÁC<br>CỐ VẤN HỌC TẬP</b></a>
-                <!-- Space coz im clueless -->
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-center"></div>
-            </div>
-        </nav>
-    </header>
     <!--Content of pages-->
     <div class="container-fluid" id="Content_Page">
-        <img src="~/Resources/Img/backgroundVL.jpg" style="height: inherit;width: inherit;position: absolute;z-index: -1;">
-        <main role="main" id="Main_Content">
+        <img src="~/Resources/Img/backgroundVL.jpg" 
+             style="height: 100vh;
+                    width: inherit;
+                    position: absolute;
+                    z-index: -1;">
+        <main role="main">
             @RenderBody()
         </main>
     </div>
-
-    <!--Footer-->
-    <footer class="border-top text-muted" >
-        <div class="container-fluid" id="Login_Footer">
-            <div style="float:left; display:inline;">
-                <b style="color:#d72235;">&copy; 2024 - Đại học Văn Lang<br></b>
-                 <b>Ban Công Nghệ Thông Tin</b>
-            </div>
-            <div style="float:right;">
-                <b style ="color:#d72235;">CAPSTONE 2024 - Nhóm 01<br></b>
-                <b>Chuyên ngành Kỹ thuật Phần Mềm</b>
-            </div>
-        </div>
-    </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
