--- a/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/Shared/_MainLayout.cshtml
@@ -29,15 +29,14 @@
                         </div>
                         <div class="info">
                             <a class="text-white d-block" href="#">@User.Identity!.Name</a>
-                        </div>
-                        <a class="nav-link" data-widget="control-sidebar" data-slide="true" href="#" role="button"></a>
-                    </li>
-                    <li class="nav-item">
-                        <form class="form-inline" asp-action="logout" asp-controller="users">
-                            <button type="submit" class="nav-link btn btn-link text-dark">
+                            <form class="form-inline" asp-action="logout" asp-controller="users">
+                                <button type="submit" 
+                                        class="nav-link btn btn-link btn-dark text-white float-right"
+                                        style="height:50%;">
                                 Logout
                             </button>
                         </form>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -48,15 +47,52 @@
             <!--Side Navbar-->
         <div class ="p-3 box-shadow" id="SideNav">
                 <ul class="navbar-nav flex-grow-1">
-                    <li class="nav-item text-center">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HomePage">
-                        <img src="~/Resources/Img/Icon2.png" style="width:30px;height:auto;padding-right:0.5rem;">
-                            Trang chủ
+                    <li class="nav-item text-center p-2 m-2">
+                        <a class=" row d-flexnav-link  text-dark" 
+                           asp-area="" asp-controller="Home" asp-action="HomePage"
+                           style="text-decoration:none">
+                            <div class=" col-2">
+                                <img src="~/Resources/Img/Icon2.png" 
+                                     style="width:40px;
+                                            height:auto;
+                                            padding-right:0.5rem;">
+                            </div>
+                        <div class="col-8 fs-6">
+                                TRANG CHỦ
+                            </div>
                         </a>
                     </li>
-                    <li class="nav-item text-center">
+                <li class="nav-item text-center p-2 m-2">
+                    <div class="row d-flex nav-link text-dark" style="text-decoration:none">
+                        <div class="col-2">
+                            <img src="~/Resources/Img/Icon1.png" style="width:40px; height:auto; padding-right:0.5rem;">
+                        </div>
+                        <div id="dropdownMenuLink" class="col-8 fs-6 btn dropdown-toggle fw-bold" role="button" aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown">
+                            DANH MỤC
+                        </div>
+                        <div class="dropdown-menu p-2 m-2" aria-labelledby="dropdownMenuLink" style="width:inherit;">
+                            <a class="dropdown-item text-black fw-bold" asp-controller="Categories" asp-action="SchoolYear">
+                                <img src="~/Resources/Img/Icon1.png" style="width:30px; height:auto; padding-right:0.5rem;">
+                                Năm Học
+                            </a>
+                            <a class="dropdown-item text-black fw-bold" asp-controller="Categories" asp-action="SemesterPlan">
+                                <img src="~/Resources/Img/Icon1.png" style="width:30px; height:auto; padding-right:0.5rem;">
+                                Kế Hoạch Học Kỳ
+                            </a>
+                            <a class="dropdown-item text-black fw-bold" asp-controller="Categories" asp-action="EndSemesterReport">
+                                <img src="~/Resources/Img/Icon1.png" style="width:30px; height:auto; padding-right:0.5rem;">
+                                Báo Cáo Cuối Kì
+                            </a>
+                            <a class="dropdown-item text-black fw-bold" asp-controller="Categories" asp-action="Statistics">
+                                <img src="~/Resources/Img/Icon1.png" style="width:30px; height:auto; padding-right:0.5rem;">
+                                Thống Kê
+                            </a>
+                        </div>
+                    </div>
+                </li>
+                        @* <li class="nav-item text-center">
                         <div class ="dropdown show">
-                            <a class="text-dark btn dropdown-toggle fw-bold"
+                        <a class="row text-dark btn dropdown-toggle fw-bold"
                                id="dropdownMenuLink"                            
                                href="#" role="button" 
                                data-toggle="dropdown" 
@@ -64,26 +100,48 @@
                                aria-expanded="false"
                                data-bs-toggle="dropdown"
                                style="width:100%;">
-                                    <img src="~/Resources/Img/Icon1.png" 
-                                         style="width:30px;height:auto;padding-right:0.5rem;">
-                                    Danh Mục
+                            <div class=" col-2">
+                                <img src="~/Resources/Img/Icon1.png"
+                                     style="width:40px;
+                                            height:auto;
+                                            padding-right:0.5rem;">
+                            </div>
+                            <div class="col-8 fs-6" style="text-decoration:none">
+                                DANH MỤC
+                            </div>
                             </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="width:100%;">
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink" style="width:100%; left:2rem">
                                 <a class="dropdown-item text-black fw-bold" 
                                    asp-controller="Categories" 
-                                   asp-action="SchoolYear">Năm Học</a>
+                                   asp-action="SchoolYear">
+                                   <img src="~/Resources/Img/Icon1.png"
+                                     style="width:30px;height:auto;padding-right:0.5rem;">
+                                   Năm Học
+                               </a>
                                 <a class="dropdown-item text-black fw-bold"
                                    asp-controller="Categories"
-                                   asp-action="SemesterPlan">Kế hoạch học kỳ</a>
+                                   asp-action="SemesterPlan">
+                                   <img src="~/Resources/Img/Icon1.png"
+                                        style="width:30px;height:auto;padding-right:0.5rem;">
+                                   Kế Hoạch Học Kỳ
+                               </a>
                                 <a class="dropdown-item text-black fw-bold"
                                    asp-controller="Categories"
-                                   asp-action="EndSemesterReport">Báo cáo cuối kì</a>
-                                <a class="dropdown-item text-black fw-bold"
+                                   asp-action="EndSemesterReport">
+                                   <img src="~/Resources/Img/Icon1.png"
+                                        style="width:30px;height:auto;padding-right:0.5rem;">
+                                   Báo Cáo Cuối Kì
+                               </a>
+                               <a class="dropdown-item text-black fw-bold"
                                    asp-controller="Categories"
-                                   asp-action="Statistics">Thống kê</a>
+                                   asp-action="Statistics">
+                                   <img src="~/Resources/Img/Icon1.png"
+                                        style="width:30px;height:auto;padding-right:0.5rem;">
+                                   Thống Kê
+                               </a>
                             </div>
                         </div>
-                    </li>                   
+                    </li>    *@                
                 </ul>
             </div>
             <!--Content of page-->
@@ -99,12 +157,8 @@
     <footer class="border-top text-muted">
         <div class="container-fluid" id="Login_Footer">
             <div style="float:left; display:inline;">
-                <b style="color:#d72235;">&copy; 2024 - Van Lang University<br></b>
-                <b>IT Department</b>
-            </div>
-            <div style="float:right;">
-                <b style="color:#d72235;">CAPSTONE 2024 - TEAM 01<br></b>
-                <b>Software Engineer Major</b>
+                <b style="color:#d72235;">&copy; 2024 - Đại học Văn Lang<br></b>
+                <b>Khoa Công Nghệ Thông Tin</b>
             </div>
         </div>
     </footer>
