Update views/ Layout revision ver3.0/ Routing for modules

--- a/CAPSTONE_TEAM01_2024/Views/ProfileManager/ProfileManager.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/ProfileManager/ProfileManager.cshtml
@@ -1,8 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Profile Manager Page";
 }
-<!-- Page content -->
-
 <div class=" containeruser p-3">
     <div class="controlheader ms-auto">
         <nav class="navbar">
@@ -43,37 +41,44 @@
             <thead>
                 <tr>
                     <th scope="col">#</th>
-                    <th scope="col">Học Kì</th>
-                    <th scope="col">Năm Học</th>
-                    <th scope="col">Thao Tác</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">SĐT</th>
+                    <th scope="col">Vai Trò</th>
+                    <th scope="col">Thao tác</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="row">1</th>
-                    <td>221</td>
-                    <td id="phone-user">2022-2023</td>
+                    <td id="email-user">nam.197pm0947@vanlanguni.vn</td>
+                    <td id="phone-user">0912131482</td>
+                    <td id="role-user">Cố Vấn</td>
                     <td>
                         <button type="button" class="btn btn-outline-primary  btn-sm" data-bs-toggle="modal" data-bs-target="#EditModal"><i class="fa-solid fa-pen-to-square" style="padding-right:2px;"></i>Cập Nhật</button>
                         <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteModal"><i class="fa-solid fa-trash" style="padding-right:2px"></i>Xóa</button>
+                        <button type="button" class="btn btn-outline-success btn-sm" data-bs-toggle="modal" data-bs-target="#ViewModal"><i class="fa-solid fa-exclamation" style="padding-right:2px;"></i>Chi Tiết</button>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">2</th>
-                    <td>232</td>
-                    <td id="phone-user">2023-2024</td>
+                    <td>nhu.197lh11763@vanlanguni.vn</td>
+                    <td>Chưa có</td>
+                    <td>Khoa</td>
                     <td>
-                        <button type="button" class="btn btn-outline-primary  btn-sm" data-bs-toggle="modal" data-bs-target="#EditModal"><i class="fa-solid fa-pen-to-square" style="padding-right:2px;"></i>Cập Nhật</button>
-                        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteModal"><i class="fa-solid fa-trash" style="padding-right:2px"></i>Xóa</button>
+                        <button type="button" class="btn btn-outline-primary  btn-sm"><i class="fa-solid fa-pen-to-square" style="padding-right:2px;"></i>Cập Nhật</button>
+                        <button type="button" class="btn btn-outline-danger btn-sm"><i class="fa-solid fa-trash" style="padding-right:2px"></i>Xóa</button>
+                        <button type="button" class="btn btn-outline-success btn-sm"><i class="fa-solid fa-exclamation" style="padding-right:2px;"></i>Chi Tiết</button>
                     </td>
                 </tr>
                 <tr>
                     <th scope="row">3</th>
-                    <td> 243</td>           
-                    <td id="phone-user">2024-2025</td>
+                    <td>an.197xd22578@vanlanguni.vn</td>
+                    <td>0906578997</td>
+                    <td>Sinh Viên</td>
                     <td>
-                        <button type="button" class="btn btn-outline-primary  btn-sm" data-bs-toggle="modal" data-bs-target="#EditModal"><i class="fa-solid fa-pen-to-square" style="padding-right:2px;"></i>Cập Nhật</button>
-                        <button type="button" class="btn btn-outline-danger btn-sm" data-bs-toggle="modal" data-bs-target="#DeleteModal"><i class="fa-solid fa-trash" style="padding-right:2px"></i>Xóa</button>
+                        <button type="button" class="btn btn-outline-primary  btn-sm"><i class="fa-solid fa-pen-to-square" style="padding-right:2px;"></i>Cập Nhật</button>
+                        <button type="button" class="btn btn-outline-danger btn-sm"><i class="fa-solid fa-trash" style="padding-right:2px"></i>Xóa</button>
+                        <button type="button" class="btn btn-outline-success btn-sm"><i class="fa-solid fa-exclamation" style="padding-right:2px;"></i>Chi Tiết</button>
                     </td>
                 </tr>
             </tbody>
