--- a/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
+++ b/CAPSTONE_TEAM01_2024/Views/_ViewStart.cshtml
@@ -10,6 +10,7 @@
         case "EndSemesterReport":
         case "SemesterPlan":
         case "Statistics":
+        case "ProfileManager":
             Layout = "_MainLayout";
             break;
     }
